Use file upload feature of webwork
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/trunk@358372 13f79535-47bb-0310-9956-ffa450edef68